--- a/index.html
+++ b/index.html
@@ -7,7 +7,10 @@
     <link rel="stylesheet" href="./css/bootstrap.css" />
     <title>Dom Project</title>
   </head>
-  <body></body>
+  <body>
+    
+
+  </body>
   <script type="text/javascript" src="./js/app.js"></script>
 </html>
 
