--- a/index.html
+++ b/index.html
@@ -5,8 +5,35 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="./css/style.css" />
     <link rel="stylesheet" href="./css/bootstrap.css" />
-    <title>Dom Project</title>
+    <title>Temperature Converter<title>
   </head>
-  <body></body>
+  <body>
+    <!-- #region enterInfo CONTAINER -->
+      <div class="enterInfo container-fluid">
+        <div class="row">
+          <div class="col">
+            <div class="form">
+              <label for="temperature">ENTER TEMP:</label>
+              <input type="number" id="temperature" class="form-control" placeholder="Temperature">
+            </div><!-- END OF FORM DIV -->
+
+            <div class="form">
+              <label for="convUnit">Convert from:</label>
+              <select class="form-control" id="convUnit">
+                 <option value="celsius">Celsius</option>
+                  <option value="fahrenheit">Fahrenheit</option>
+                  <option value="kelvin">Kelvin</option>
+                  
+              </select><!-- END OF SELECT -->
+            </div><!-- END OF FORM DIV -->
+          </div><!-- END OF COL -->
+        </div><!-- END OF ROW -->
+      </div><!-- END enterInfo CONTAINER -->
+    <!-- #endregion -->
+  </body>
   <script type="text/javascript" src="./js/app.js"></script>
+  <!-- jQuery and Bootstrap JS -->
+    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.1/dist/umd/popper.min.js"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
 </html>
