--- a/index.html
+++ b/index.html
@@ -10,10 +10,15 @@
   <body>
     <div class="enterInfo container-fluid">
       <div class="row">
+        <div class="spaceHolder col"></div>
         <div class="col">
+          <div class="header">
+            <h3>Temperature Converter</h3>
+            <hr>
+          </div>
           <!-- #region enterInfo Input -->
           <div class="form">
-            <label for="temperature">ENTER TEMP:</label>
+            <label for="temperature">Enter temperature:</label>
             <input
               type="number"
               id="temperature"
@@ -41,7 +46,6 @@
             <label for="convToUnit">Convert To:</label>
             <select class="form-control" id="convToUnit">
               <option value="celsius">Celsius</option>
-              <!-- Fixed typo from "Celcius" to "Celsius" -->
               <option value="fahrenheit">Fahrenheit</option>
               <option value="kelvin">Kelvin</option></select
             ><!-- END OF SELECT -->
@@ -50,13 +54,17 @@
           <!-- #endregion -->
 
           <!-- #region Convert Button & Display -->
-          <button id="convertButton" class="btn btn-primary btn-block">
+           <div class="buttonContainer">
+            <button id="convertButton" class="btn btn-primary btn-block">
             Convert Temperature
           </button>
+           </div><!-- END OF BUTTON CONTAINER -->
+          
           <div id="result" class="convResult"></div>
           <!-- #endregion -->
         </div>
         <!-- END OF COL -->
+        <div class="spaceHolder col"></div>
       </div>
       <!-- END OF ROW -->
     </div>
