--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         <div class="col">
           <div class="header">
             <h3>Temperature Converter</h3>
-            <hr>
+            <hr />
           </div>
           <!-- #region enterInfo Input -->
           <div class="form">
@@ -54,12 +54,13 @@
           <!-- #endregion -->
 
           <!-- #region Convert Button & Display -->
-           <div class="buttonContainer">
+          <div class="buttonContainer">
             <button id="convertButton" class="btn btn-primary btn-block">
-            Convert Temperature
-          </button>
-           </div><!-- END OF BUTTON CONTAINER -->
-          
+              Convert Temperature
+            </button>
+          </div>
+          <!-- END OF BUTTON CONTAINER -->
+
           <div id="result" class="convResult"></div>
           <!-- #endregion -->
         </div>
