--- a/index.html
+++ b/index.html
@@ -8,66 +8,77 @@
     <title>Temperature Converter</title>
   </head>
   <body>
-    <div class="enterInfo container-fluid">
-      <div class="row">
-        <div class="spaceHolder col"></div>
-        <div class="col">
-          <div class="header">
-            <h3>Temperature Converter</h3>
-            <hr />
-          </div>
-          <!-- #region enterInfo Input -->
-          <div class="form">
-            <label for="temperature">Enter temperature:</label>
-            <input
-              type="number"
-              id="temperature"
-              class="form-control"
-              placeholder="Temperature"
-            />
-          </div>
-          <!-- END OF FORM DIV -->
-          <!-- #endregion -->
+    <div class="lines">
+      <div class="line"></div>
+      <div class="line"></div>
+      <div class="line"></div>
+    </div>
+    <!-- END OF LINES BACKGROUND -->
 
-          <!-- #region Convert From Form -->
-          <div class="form">
-            <label for="convFromUnit">Convert from:</label>
-            <select class="form-control" id="convFromUnit">
-              <option value="celsius">Celsius</option>
-              <option value="fahrenheit">Fahrenheit</option>
-              <option value="kelvin">Kelvin</option></select
-            ><!-- END OF SELECT -->
-          </div>
-          <!-- END OF FORM DIV -->
-          <!-- #endregion -->
+      <div class="enterInfo container-fluid">
+        <div class="row">
+          <div class="spaceHolder col"></div>
+          <div class="col">
+            <div class="header">
+              <h3>Temperature Converter</h3>
+              <hr />
+            </div>
+            <!-- #region enterInfo Input -->
+            <div class="formContainer">
+              <div class="form">
+                <label for="temperature">Enter temperature:</label>
+                <input
+                  type="number"
+                  id="temperature"
+                  class="form-control"
+                  placeholder="Temperature"
+                />
+              </div>
+              <!-- END OF FORM DIV -->
+              <!-- #endregion -->
 
-          <!-- #region Convert To Form -->
-          <div class="form">
-            <label for="convToUnit">Convert To:</label>
-            <select class="form-control" id="convToUnit">
-              <option value="celsius">Celsius</option>
-              <option value="fahrenheit">Fahrenheit</option>
-              <option value="kelvin">Kelvin</option></select
-            ><!-- END OF SELECT -->
-          </div>
-          <!-- END OF FORM DIV -->
-          <!-- #endregion -->
+              <!-- #region Convert From Form -->
+              <div class="form">
+                <label for="convFromUnit">Convert from:</label>
+                <select class="form-control" id="convFromUnit">
+                  <option value="celsius">Celsius</option>
+                  <option value="fahrenheit">Fahrenheit</option>
+                  <option value="kelvin">Kelvin</option></select
+                ><!-- END OF SELECT -->
+              </div>
+              <!-- END OF FORM DIV -->
+              <!-- #endregion -->
 
-          <!-- #region Convert Button & Display -->
-          <div class="buttonContainer">
-            <button id="convertButton" class="btn btn-primary btn-block">
-              Convert Temperature
-            </button>
-          </div>
-          <!-- END OF BUTTON CONTAINER -->
+              <!-- #region Convert To Form -->
+              <div class="form">
+                <label for="convToUnit">Convert To:</label>
+                <select class="form-control" id="convToUnit">
+                  <option value="celsius">Celsius</option>
+                  <option value="fahrenheit">Fahrenheit</option>
+                  <option value="kelvin">Kelvin</option></select
+                ><!-- END OF SELECT -->
+              </div>
+              <!-- END OF FORM DIV -->
+              <!-- #endregion -->
 
-          <div id="result" class="convResult"></div>
-          <!-- #endregion -->
+              <!-- #region Convert Button & Display -->
+              <div class="buttonContainer">
+                <button id="convertButton" class="btn btn-primary btn-block">
+                  Convert Temperature
+                </button>
+              </div>
+              <!-- END OF BUTTON CONTAINER -->
+
+              <div id="result" class="convResult"></div>
+              <!-- #endregion -->
+            </div>
+            <!-- END OF COL -->
+          </div>
+          <!-- END formComntainer DIV -->
+
+          <div class="spaceHolder col"></div>
         </div>
-        <!-- END OF COL -->
-        <div class="spaceHolder col"></div>
-      </div>
-      <!-- END OF ROW -->
+        <!-- END OF ROW -->
     </div>
     <!-- END OF enterInfo CONTAINER -->
 
