--- a/index.html
+++ b/index.html
@@ -4,7 +4,14 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="./css/style.css" />
+
     <link rel="stylesheet" href="./css/bootstrap.css" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Exo+2:ital,wght@0,100..900;1,100..900&display=swap"
+      rel="stylesheet"
+    />
     <title>Temperature Converter</title>
   </head>
   <body>
@@ -20,7 +27,7 @@
         <div class="spaceHolder col"></div>
         <div class="col">
           <div class="header">
-            <h3>Temperature Converter</h3>
+            <h1>Temperature Converter</h1>
             <hr />
           </div>
           <!-- #region enterInfo Input -->
@@ -68,8 +75,10 @@
               </button>
             </div>
             <!-- END OF BUTTON CONTAINER -->
-
-            <div id="result" class="convResult"></div>
+            <h2>Result:</h2>
+            <div id="result" class="convResult">
+              
+            </div>
             <!-- #endregion -->
           </div>
           <!-- END OF COL -->
