--- a/index.html
+++ b/index.html
@@ -75,10 +75,12 @@
               </button>
             </div>
             <!-- END OF BUTTON CONTAINER -->
+             <div class="resultContainer">
             <h2>Result:</h2>
             <div id="result" class="convResult">
               
-            </div>
+            </div><!-- END RESULT DIV -->
+          </div><!-- END resultContainer DIV -->
             <!-- #endregion -->
           </div>
           <!-- END OF COL -->
